<resources>
    <string name="app_name">UpBody</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="configuration">Configuration</string>
    <string name="about">About</string>
    <string name="hist">User History</string>
    <string name="exec_monitoring">Exercise Monitoring</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile_title">Profile</string>
    <string name="user_name">Name</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="submit">Submit</string>
    <string name="selectDate">Birthday</string>
    <string name="config_title">Configuration</string>
    <string name="exec_type">Exercise Type</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="biking">Biking</string>
    <string name="speed_unit">Speed Unit</string>
    <string name="menu_about">About</string>
    <string name="upbody_desc">UpbBody is a physical exercise monitoring system that aims to assist its users in monitoring their activities in different exercise modalities</string>
    <string name="devs">Developers</string>
    <string name="copyright">© All Rights Reserved - 2022</string>
    <string name="errorUserName">The name entered is invalid.</string>
    <string name="errorUserHeight">The height entered is invalid</string>
    <string name="errorProfileExceptionValidations">Sorry, something went wrong, please try again later.</string>



    <string-array name="config_spinner">
        <item>Km/h</item>
        <item>M/s</item>
    </string-array>

    <string-array name="mapOrientation_spinner">
        <item name="none">None</item>
        <item>North Up</item>
        <item>Course Up</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errorUserWeight">The reported weight is invalid</string>
    <string name="NullInfoProfile">Error registering information, try later</string>
    <string name="errorGender">Gender needs to be informed.</string>
    <string name="savedMessage">Saved</string>
    <string name="errorUserNameChar">User name cannot have special characteres.</string>
    <string name="exercise_mo">Exercise Monitoring App</string>
    <string name="welcome">Welcome</string>
    <string name="exec_importance">Exercise Importance</string>
    <string name="exec_coverage">Exercises Monitoring with UpBody</string>
    <string name="benefit_weight">Exercise can help prevent excess weight gain or help maintain weight loss.</string>
    <string name="benefit_heart">Regular exercise helps prevent or manage many health problems and concerns.</string>
    <string name="benefit_mood">Physical activity stimulates various brain chemicals that may leave you feeling happier, more relaxed and less anxious.</string>
    <string name="benefit_sleep">Regular physical activity can help you fall asleep faster, get better sleep and deepen your sleep.</string>
    <string name="map_orientation">Map Orientation</string>
    <string name="vetorial">Vetorial</string>
    <string name="satellite">Satellite</string>
    <string name="map_type">Map Type</string>
    <string name="errorBirthDate">Please insert your Birthdate</string>
    <string name="home">Home</string>
    <string name="twoDecimal">Invalid weight, only 2 decimals allowed</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="speed">Speed</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="save">Save</string>
    <string name="exec_hist">Historic</string>
    <string name="exec_historic">Historic</string>
    <string name="finished">Finished</string>
    <string name="calories">Calories</string>

</resources>