<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.execproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.execproject.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.execproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.execproject.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_config"
        android:name="com.example.execproject.ui.configuration.ConfigurationFragment"
        android:label="Configuration"
        tools:layout="@layout/fragment_configuration" />
    <fragment
        android:id="@+id/nav_exec_monit"
        android:name="com.example.execproject.ui.exec_monitoring.ExerciseMonitoringFragment"
        android:label="@string/exec_monitoring"
        tools:layout="@layout/fragment_excercise_monitoring" />
    <fragment
        android:id="@+id/nav_exec_hist"
        android:name="com.example.execproject.ui.exec_historic.ExerciseHistoricFragment"
        android:label="@string/exec_historic"
        tools:layout="@layout/fragment_excercise_historic" />
</navigation>