<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.configuration.ConfigurationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/config_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_title"
            android:textColor="#1E90FF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/exec_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exec_type"
            android:textColor="#A9A9A9"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.144" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#1E90FF"
            android:onClick="submitConfiguration"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="353dp"
            android:layout_height="44dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.277">

            <RadioButton
                android:id="@+id/walk"
                android:layout_width="117dp"
                android:layout_height="match_parent"
                android:onClick="radioButtonhandler"
                android:text="@string/walking"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="194dp" />

            <RadioButton
                android:id="@+id/run"
                android:layout_width="117dp"
                android:layout_height="44dp"
                android:onClick="radioButtonhandler"
                android:text="@string/running"
                tools:layout_editor_absoluteX="149dp"
                tools:layout_editor_absoluteY="195dp" />

            <RadioButton
                android:id="@+id/biking"
                android:layout_width="117dp"
                android:layout_height="match_parent"
                android:onClick="radioButtonhandler"
                android:text="@string/biking"
                tools:layout_editor_absoluteX="277dp"
                tools:layout_editor_absoluteY="194dp" />


        </RadioGroup>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="67dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_directions_bike_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.793"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="67dp"
            android:layout_height="51dp"
            android:src="@drawable/ic_running"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="67dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_walking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205" />

        <TextView
            android:id="@+id/speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_unit"
            android:textColor="#A9A9A9"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.086"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387" />

        <Spinner
            android:id="@+id/spinnerConfig"
            android:layout_width="145dp"
            android:layout_height="33dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.391" />

        <fragment
            android:id="@+id/mapView"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="351dp"
            android:layout_height="190dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.672" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>